[gd_scene load_steps=3 format=3 uid="uid://c2qhm8n2k5xdp"]

[ext_resource type="Script" path="res://scripts/ui/MechBayController.gd" id="1_x6d8k"]

[sub_resource type="Theme" id="Theme_1"]

[node name="MechBay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme_1")
script = ExtResource("1_x6d8k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12, 0.12, 0.18, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="MechListPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MechListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer/MechListPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/MechListPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MECH BAY"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MainContainer/MechListPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Back"

[node name="HSeparator" type="HSeparator" parent="MainContainer/MechListPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/MechListPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MechList" type="VBoxContainer" parent="MainContainer/MechListPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MechDetailsPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MechDetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MechNameLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer"]
layout_mode = 2
text = "Select a Mech"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/MechDetailsPanel/VBoxContainer"]
layout_mode = 2

[node name="InfoContainer" type="HBoxContainer" parent="MainContainer/MechDetailsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftInfoPanel" type="VBoxContainer" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BasicInfoLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "BASIC INFO"
horizontal_alignment = 1

[node name="BasicInfoSeparator" type="HSeparator" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2

[node name="TonnageLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "Tonnage: --"

[node name="WeightClassLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "Class: --"

[node name="MovementLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "Movement: --"

[node name="PilotLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "Pilot: --"

[node name="StatusLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "Status: --"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2

[node name="PilotManagementLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2
text = "PILOT ASSIGNMENT"
horizontal_alignment = 1

[node name="PilotButtonContainer" type="HBoxContainer" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel"]
layout_mode = 2

[node name="AssignPilotButton" type="Button" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel/PilotButtonContainer"]
layout_mode = 2
text = "Assign Pilot"

[node name="UnassignPilotButton" type="Button" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel/PilotButtonContainer"]
layout_mode = 2
text = "Unassign"

[node name="RightInfoPanel" type="VBoxContainer" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArmorLabel" type="Label" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel"]
layout_mode = 2
text = "ARMOR STATUS"
horizontal_alignment = 1

[node name="ArmorSeparator" type="HSeparator" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel"]
layout_mode = 2

[node name="ArmorContainer" type="VBoxContainer" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="HeadArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="CenterTorsoArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="LeftTorsoArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="RightTorsoArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="LeftArmArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="RightArmArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="LeftLegArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="RightLegArmorBar" type="ProgressBar" parent="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/RightInfoPanel/ArmorContainer"]
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
show_percentage = false

[node name="HSeparator3" type="HSeparator" parent="MainContainer/MechDetailsPanel/VBoxContainer"]
layout_mode = 2

[node name="ActionButtonContainer" type="HBoxContainer" parent="MainContainer/MechDetailsPanel/VBoxContainer"]
layout_mode = 2

[node name="RepairButton" type="Button" parent="MainContainer/MechDetailsPanel/VBoxContainer/ActionButtonContainer"]
layout_mode = 2
text = "Repair Mech"

[node name="SellButton" type="Button" parent="MainContainer/MechDetailsPanel/VBoxContainer/ActionButtonContainer"]
layout_mode = 2
text = "Sell Mech"

[connection signal="pressed" from="MainContainer/MechListPanel/VBoxContainer/HeaderContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel/PilotButtonContainer/AssignPilotButton" to="." method="_on_assign_pilot_button_pressed"]
[connection signal="pressed" from="MainContainer/MechDetailsPanel/VBoxContainer/InfoContainer/LeftInfoPanel/PilotButtonContainer/UnassignPilotButton" to="." method="_on_unassign_pilot_button_pressed"]
[connection signal="pressed" from="MainContainer/MechDetailsPanel/VBoxContainer/ActionButtonContainer/RepairButton" to="." method="_on_repair_button_pressed"]
[connection signal="pressed" from="MainContainer/MechDetailsPanel/VBoxContainer/ActionButtonContainer/SellButton" to="." method="_on_sell_button_pressed"]